add dependencies and arguments

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,25 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+
+dfdx = {version = "0.13.0", default-features = false}
+clap = { version = "4.5.53", features = ["derive"], optional = true }
+clap_derive = {version = "4.5.49", optional = true}
+onnx-ir = "0.19.1"
+
+[[bin]]
+name = "stlx"
+required-features = ["cli"]
+
+[features]
+cli = ["clap", "clap_derive"]
+
+default = ["std"]
+
+# TODO: add or remove some of these
+cuda = ["dfdx/cuda"]
+std = ["dfdx/std"]
+fast-alloc = ["dfdx/fast-alloc"]
+no-std = ["dfdx/no-std"]
+cudnn = ["dfdx/cudnn"]
+f16 = ["dfdx/f16"]
